Add Layout and Scaffold functions

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,7 +8,11 @@
     //TailWindCss
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/services/*": ["./src/services/*"],
+      "@/types/*": ["./src/types/*"],
+      "@/lib/*": ["./src/lib/*"]
     },
 
     /* Bundler mode */
